# justin

./: .gitignore  .travis.yml  3_check_sameness.py  7_metadata.py  CHANGELOG.md  CLAUDE.md  README.md  collect_trace.py  configurator.py  filter_by_source.py  filter_copies.py  json_migration.py  justin.py  main.py  make_gifs_script.py  old_justin.py  pyproject.toml  pyvenv.cfg  requirements-dev.txt  requirements.txt  setup.py  split_by_extension.py  test_runner.py  tester.py  util.py
.claude/commands/: backlog.md  cli.md  cms.md  di.md  git.md  metafiles.md  patterns.md  style.md
command/: command_check.py  command_stage.py  command_stage2.py
filesystem/: file.py  filesystem.py  folder.py  folder_based.py  fs.py  mock_dir_entry.py  path.py  path_interpretation.py
filesystem2/: absolute_path.py  file.py  filesystem.py  folder.py  folder_based.py  path.py  relative_path.py
justin/: _tmp  chunkate.py  cms.py  commands.py  namer.py  runner.py  uploader.py
justin/actions/: action.py  action_factory.py  append_album_action.py  check_ratios_action.py  checks_runner.py  cms_action.py  create_event_action.py  date_split.py  delay_action.py  delete_posts_action.py  destinations_aware_action.py  drone.py  event.py  find_faces_action.py  fix_metafile_action.py  get_empty_groups.py  get_likers_action.py  group_action.py  location.py  manage_tags_action.py  mixins.py  move_action.py  pano_extract_action.py  pattern_action.py  people.py  populate_action.py  rearrange_action.py  redistribute.py  register_people_action.py  sequence_action.py  split_action.py  timelapse_prproj.py  upload_action.py  web_sync_action.py
justin/actions/named/: archive_action.py  destinations_aware_action.py  fix_metafile_action.py  make_gifs_action.py  mixins.py  named_action.py  relocate.py  resize_gif_sources_action.py  schedule_action.py  split_action.py  upload_action.py  web_sync_action.py
justin/actions/scheduled/: local_sync_action.py  schedule_action.py  scheduled_action.py  sync_posts_status_action.py
justin/actions/stage/: stage.py  stage_action.py
justin/browser/: section_schema.py  section_settings.py  vk_browser.py
justin/cms/: base_cms.py  cms.py  cms_action.py  db.py  google_sheets_database.py  google_sheets_database_2.py  google_sheets_entries.py  migration.py  people.py  people_cms.py  photosets_cms.py  posts_cms.py  sync_with_google.py
justin/cms/tables/: csv_table.py  json_table.py  migrate_table.py  table.py
justin/cms_2/: sqlite_cms.py  sqlite_database.py  sqlite_entries.py
justin/cms_2/sub_cms/: people_cms.py  photosets_cms.py  posts_cms.py  posts_to_tags_cms.py  synced_tags_cms.py  tags_cms.py  wagner_fischer.py
justin/cms_old/: base_cms.py  photosets_cms.py
justin/commands/: command.py  command_factory.py  stage_command.py
justin/commands/single_subparser_commands/: delay_command.py  delete_posts_command.py  local_sync_command.py  named_command.py  rearrange_command.py  resize_gif_sources_command.py  single_action_command.py  single_subparser_command.py  upload_command.py
justin/di/: actions.py  app.py  checks.py  commands.py  extractors.py  metafiles.py  selectors.py  stages.py
justin/one_timers/: embrace_tradition.py  progress_inverter.py
justin/postmypost/: channels.py  postmypost.py  utils.py
justin/resources/: timelapse_template.prproj
justin/runners/: console_runner.py  general_runner.py  ide_runner.py
justin/shared/: config.py  context.py  factories_container.py  filesystem.py  justin.py  metafile.py  metafile2.py  metafile_migrations.py  new_structure.py  place.py  sequencer.py  structure.py  structure_new.py  structure_old.py  world.py
justin/shared/configuration/: config.py
justin/shared/filesystem/: file.py  folder_tree.py  fs.py  path_based.py  paths_parser.py  relative_fileset.py
justin/shared/helpers/: checks_runner.py  gif_maker.py  parting_helper.py  parts.py  photoset_utils.py  utils.py
justin/shared/locations/: locations.py  locations_manager.py  locations_new.py
justin/shared/metafiles/: groups_metafile.py  metafile.py  migrations.py  photoset_metafile.py  post_metafile.py  readwriters.py
justin/shared/models/: disk.py  exif.py  person.py  photoset.py  photoset_migration.py  sources.py  world.py
justin/typer/: populate_command.py  setup_event_command.py  timelapse_command.py  upload_command.py  web_sync_command.py
justin/typer/app/: app.py  console_runner.py  ide_runner.py  tracker.py  (+1 more)
legacy/: 5_photo_copier.py  logger.py
legacy/command/: command_check.py
legacy/one_timers/: backup_main.py  collider.py  filter_by_jpegs.py  piter_helper.py  piter_renamer.py  some_funcs.py
logic/: jpeg_separator.py
models/: category.py  destination.py  disk.py  disk_metafile.py  folder_tree.py  movable.py  photoset.py  source.py  stage.py  world.py
models2/: disk.py  source.py  subphotoset.py  world2.py
one_timers/: collider.py  filter_by_jpegs.py  path_interpretation.py  piter_helper.py  piter_renamer.py
src/justin/: ___test.json
subfolder/: subfolder.py
tests/: test_mypy_debt.py
tests/browser/: test_section_schema.py  test_set_sections_integration.py
v3_0/: args.py
v3_0/actions/: action.py  action_factory.py  action_id.py  checks_runner.py  delete_posts_action.py  fix_metafile_action.py  local_sync_action.py  move_action.py  rearrange_action.py  split_action.py  sync_posts_status_action.py
v3_0/archive/: archive.py  archive_adder.py  category.py  destination.py
v3_0/commands/: command.py  command_factory.py  command_stage.py  schedule_command.py  stage_command.py
v3_0/filesystem/: file.py  fs.py  path_based.py  relative_fileset.py
v3_0/helpers/: gif_maker.py  parting_helper.py  util.py
v3_0/logic/: check.py  filter.py  gif_maker.py  selector.py
v3_0/models/: disk.py  jpeg_source.py  path_interpretation.py  photoset.py  raw_source.py  source.py  sources_parser.py  world.py
v3_0/runners/: general_runner.py  ide_runner.py
v3_0/schedule/: posts_cleaner.py  schedule_command.py
v3_0/shared/: factories_container.py  justin.py  lazy_proxy.py  new_structure.py
v3_0/stage/: stage_command.py
(+305 files in other folders)
