[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "justin"
version = "0.2.0"
description = "Photo processing and management tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Harry Djachenko", email = "i.s.djachenko@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["photo", "processing", "face-recognition", "vk"]

# ВАЖНО: Здесь указываются зависимости как для публикации на PyPI.
# Они должны быть доступны в репозитории.
dependencies = [
    "pyvko>=0.1.11",
    "justin_utils>=0.0.1",
    "Pillow",
    "lazy-object-proxy",
    "six",
    "py_linq",
    "exif",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "frozendict",
    "typer[all]>=0.9.0",
    # "face_recognition",  # Опциональная зависимость, может быть добавлена при необходимости
    "coverage"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    "pydantic>=2.0",
]
test = [
    "pytest",
    "ruff",
    "mypy",
]
release = [
    "build",
    "python-semantic-release",
]

# Объявление консольной команды (главная точка входа)
[project.scripts]
justin = "justin.typer.app.console_runner:run"

[project.urls]
Homepage = "https://github.com/djachenko/justin"
"Bug Tracker" = "https://github.com/djachenko/justin/issues"
"Source Code" = "https://github.com/djachenko/justin"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
commit_message = "chore(release): v{version} [no ci]"
major_on_zero = false
allow_zero_version = true

[tool.mypy]
ignore_missing_imports = true

# Suppressed files — 278 pre-existing errors, tracked in backlog under "mypy cleanup"
# To fix: remove the module from this list and fix errors in that file.
[[tool.mypy.overrides]]
module = [
    "justin.actions.check_ratios_action",
    "justin.actions.cms_action",
    "justin.actions.event",
    "justin.actions.fix_metafile_action",
    "justin.actions.get_likers_action",
    "justin.actions.manage_tags_action",
    "justin.actions.move_action",
    "justin.actions.pattern_action",
    "justin.actions.populate_action",
    "justin.cms.people_cms",
    "justin.cms.tables.json_table",
    "justin.cms.tables.table",
    "justin.cms_2.storage.google_sheets.google_sheets_database",
    "justin.cms_2.storage.google_sheets.google_sheets_entries",
    "justin.cms_2.storage.sqlite.sqlite_entries",
    "justin.cms_2.sub_cms.photosets_cms",
    "justin.cms_2.sub_cms.posts_to_tags_cms",
    "justin.cms_2.sub_cms.wagner_fischer",
    "justin.one_timers.embrace_tradition",
    "justin.shared.filesystem",
    "justin.shared.helpers.photoset_utils",
    "justin.shared.metafiles.metafile",
    "justin.shared.metafiles.migrations",
    "justin.shared.metafiles.readwriters",
    "justin.shared.models.exif",
    "justin.shared.models.photoset",
    "justin.shared.models.photoset_migration",
    "justin.shared.models.sources",
    "justin.shared.world",
    "justin.typer.base_commands.pattern_command",
    "justin.typer.date_split_command",
    "justin.typer.populate_command",
    "justin.typer.register_people_command",
    "justin.typer.sequence_command",
    "justin.typer.stage_command.abstracts.file_mover",
    "justin.typer.stage_command.checks.extracting.structure",
    "justin.typer.stage_command.checks.extracting.unselected",
    "justin.typer.stage_command.checks.simple.gif_sources",
    "justin.typer.stage_command.checks.simple.metafile_state",
    "justin.typer.stage_command.hooks.progress",
    "justin.typer.stage_command.stage",
    "justin.typer.stage_command.stage_command",
    "justin.typer.upload_command",
    "justin.typer.web_sync_command",
    "justin.shared.structure",
    "justin.shared.config",
    "justin.shared.helpers.utils",
    "justin.cms_2.storage.sqlite.sqlite_database",
]
ignore_errors = true

[tool.coverage.run]
source = ["justin"]
branch = true